<resources>
    <string name="app_name">AppForASC</string>
    <string name="HomeScreenTitle">WELCOME</string>
    <string name="HomeScreenPlay">PLAY</string>
    <string name="HomeScreenCharacters">CHARACTERS</string>
    <string name="HomeScreenSettings">SETTINGS</string>
    <string name="HomeScreenTutorial">TUTORIAL</string>
    <string name="ChooseStoryTitle">CHOOSE A STORY</string>
    <string-array name="storyNames">
        <item>Going to the Park</item>
        <item>The Sleepover</item>
        <item>To the Shops</item>
    </string-array>
    <string-array name="tutorialNames">
        <item>Making a Character</item>
        <item>Playing a Story (with Options)</item>
        <item>Playing a Story (without Options)</item>
    </string-array>
    <string name="CharactersTitle">CHARACTERS</string>
    <string name="SettingsTitle">Settings</string>
    <string name="ChangeColour">Background Colours</string>
    <string name="TutorialTitle">Tutorial</string>
    <string name="title_activity_character_create">CharacterCreate</string>
    <string-array name="rewardSounds">
        <item>No Sound</item>
        <item>Cheer</item>
        <item>Guitar</item>
        <item>Harp</item>
        <item>Horn</item>
        <item>Tropical</item>
        <item>Bell</item>
    </string-array>
    <string-array name="genderOptions">
        <item>None</item>
        <item>Girl</item>
        <item>Boy</item>
    </string-array>
    <string name="ParkStory1">It’s a Saturday afternoon and NAME1 is bored at home. NAME1 has done all ThirdPos1 homework and chores and now wants to go outside in the beautiful sunshine. NAME1 has decided ThirdPron1 will go and see ThirdPos1 friend NAME2 and ask if ThirdPron2 wants to go to the park together. NAME1 knocks on NAME2’s door and NAME2 answers.</string>
    <string name="ParkStory2">NAME1 and NAME2 love playing sports in the park together. But they enjoy playing so many sports that NAME2 doesn’t know which one NAME1 would like to play today.</string>
    <string name="ParkStory3">“Excellent!”, says NAME2. NAME2 grabs ThirdPos2 football from the shed, puts ThirdPos2 trainers on and walks to the park with NAME1. At this point NAME2 notices a problem and has to stop. NAME1 asks what’s wrong?</string>
    <string name="ParkStory4">NAME2 ties ThirdPos2 shoelaces so that ThirdPron2 doesn’t trip and hurt ThirdYPos2. While NAME2 is concentrating on tying ThirdPos2 shoelaces, NAME1 sees a cool animal pass by ThirdXPos1. NAME1 quickly tries to show NAME2 but by the time ThirdPron2 looks up, the animal has gone. “What kind of animal was it?”, asks NAME2.</string>
    <string name="ParkStory5">“Wow! Cool! I wish I had seen it. What colour was the bird?” says NAME2.</string>
    <string name="ParkStory6">NAME1 and NAME2 reach the park and are talking about their favourite things about the park. NAME2 says ThirdPos2 favourite thing is:</string>
    <string name="ParkStory7">NAME1 and NAME2 start playing football and are having a great time. They play until NAME1 suddenly has to stop.</string>
    <string name="ParkStory8">When NAME1 is finished on the phone ThirdPron1 tells NAME2 that it was ThirdPos1 Dad, saying that dinner will be ready soon. “Ok, that’s cool.” says NAME2. But before they leave for home NAME2 hears something in the distance and wants to do something before they go home. </string>
    <string name="ParkStory9">“Great, I’d love an ice cream!” says NAME1. The pair get an ice cream from the van and walk home together after an excellent Saturday afternoon.</string>
    <string name="GrandparentStory1">Jessica is going to see her Grandad today. She gets in the car with Mum and Dad and drives to her Grandad’s house in the village. Sometimes Grandad’s house can be a little boring so Jessica decides to take something with her to play with.</string>
    <string name="GrandparentStory2">Mum, Dad and Jessica arrive at Grandad’s house. Jessica loves her Grandad but sometimes she gets worried about him, he is 87 years old after all (that’s 75 years older than Jessica!). When they arrive Grandad is outside but he doesn’t look very well. Jessica asks “What’s wrong?”</string>
    <string name="GrandparentStory3">“Well I hope you get better”, says Jessica. “Oh I’ll be fine, I’ve been like this for years now”, Grandad laughs. Mum and Dad leave to go to the city and now it’s just Jessica and Grandad. It’s now the afternoon and Grandad would like to go the shops. “What are you going to buy”, asks Jessica.</string>
    <string name="GrandparentStory4">They both go out to the shops and get all of Grandad’s items. It was cold outside so when they get back, Grandad and Jessica spend a long time taking off their jackets and gloves and scarves and hats and wellies and extra pairs of socks. They settle down in front of the fire with a hot chocolate. It’s still an hour until Mum and Dad come back so Jessica would like to do something before they pick her up.</string>
    <string name="GrandparentStory5">Mum and Dad arrive to pick Jessica up. Jessica gives her Grandad a hug before she goes and then they head home. </string>
    <string name="ParkAct1">NAME2 wants to say hello to NAME1. Let NAME1 know you mean ‘Hello’ without talking.</string>
    <string name="ParkAct2">Let NAME2 know you want to play <u>football</u> with ThirdXPos2, without talking.</string>
    <string name="ParkAct3">NAME2 was too quick when ThirdPron2 left the house and ThirdPron2 didn’t tie ThirdPos2 shoelaces. Without speaking, let NAME1 know that you have to stop and tie your shoelaces.</string>
    <string name="ParkAct4">You saw a bird. Let NAME2 know that you saw a bird fly past.</string>
    <string name="ParkAct5">Let NAME2 know that the bird was blue.</string>
    <string name="ParkAct6">Tell NAME1 your favourite thing about the park is Swimming in the outdoor pool.</string>
    <string name="ParkAct7">NAME1 is getting a phone call. Let NAME2 know you are getting a phone call.</string>
    <string name="ParkAct8">NAME2 has heard an Ice Cream van. Tell NAME1 that you would like to get an ice cream before you go home.</string>
    <string name="ParkGuess1">What does NAME2 mean when ThirdPron2 does the action?</string>
    <string name="ParkGuess2">What sport does NAME1 want to play today?</string>
    <string name="ParkGuess3">Why does NAME2 have to stop?</string>
    <string name="ParkGuess4">What animal did NAME1 see?</string>
    <string name="ParkGuess5">What colour was the bird that NAME1 saw?</string>
    <string name="ParkGuess6">What is NAME2’s favourite thing about the park</string>
    <string name="ParkGuess7">Why did NAME1 stop playing football</string>
    <string name="ParkGuess8">What would NAME2 like to do before they leave the park?</string>
    <string-array name="ParkAnswers1">
        <item>Hello</item>
        <item>Goodbye</item>
        <item>Go Away</item>
    </string-array>
    <string-array name="ParkAnswers2">
        <item>Golf</item>
        <item>Tennis</item>
        <item>Football</item>
    </string-array>
    <string-array name="ParkAnswers3">
        <item>NAME2 has to tie ThirdPos2 shoelaces</item>
        <item>NAME2 forgot ThirdPos2 hat</item>
        <item>NAME2 has a headache</item>
    </string-array>
    <string-array name="ParkAnswers4">
        <item>A dog</item>
        <item>A bird</item>
        <item>A snake</item>
    </string-array>
    <string-array name="ParkAnswers5">
        <item>Black</item>
        <item>Yellow</item>
        <item>Blue</item>
    </string-array>
    <string-array name="ParkAnswers6">
        <item>Climbing trees</item>
        <item>Swimming in the outdoor pool</item>
        <item>Playing football</item>
    </string-array>
    <string-array name="ParkAnswers7">
        <item>NAME1 hurt ThirdPos1 leg</item>
        <item>NAME1 saw another bird</item>
        <item>NAME1 is getting a phone call</item>
    </string-array>
    <string-array name="ParkAnswers8">
        <item>Buy a drink at the shop</item>
        <item>Get an ice cream</item>
        <item>Go swimming in the outdoor pool</item>
    </string-array>
    <string name="ParkSequence">12122121</string>
    <string name="GrandparentSequence">2112</string>
    <string name="ParkAnswerSequence">13123232</string>
    <string name="SleepoverStory1">It’s a Friday after school and NAME1 is going over to ThirdPos1 friend’s house for a sleepover. NAME1 is waiting for ThirdPos1 friend, NAME2, so that they can walk to ThirdPos2 house together. NAME1 is waiting for NAME2 at the school gate and ThirdPron1 thinks it would be fun to do something before NAME2 arrives. </string>
    <string name="SleepoverStory2">NAME2 arrives at the school gate but ThirdPron2 can’t see NAME1. NAME1 jumps out from behind a wall and tries to scare NAME2. NAME2 jumps but they both start laughing. “I hope I didn’t scare you too much. How are you feeling anyway?” asks NAME1.</string>
    <string name="SleepoverStory3">“Ah me too” says NAME1. “We better get back to my house and get a drink then.” says NAME2. They walk to NAME2’s home and grab a glass of water. NAME2’s Mum walks into the kitchen and says hello to NAME1 and NAME2. NAME2’s Mum then mentions that dinner will be ready in 2 hours. NAME2 asks NAME1 what ThirdPron1 would like to do until then.</string>
    <string name="SleepoverStory4">“That sounds fun” say NAME2. They both go through to the sitting room, close the curtains and sit down to watch a movie called Big Hero 6. They finish watching the film just as dinner is ready. NAME1 had seen the movie before, but NAME2 had not. “What did you think of the movie?” asks NAME1.</string>
    <string name="SleepoverStory5">They sit down to have pizza for dinner with NAME2’s Mum and little brother. Everyone finishes and everyone says thank you to NAME2’s Mum for making the dinner. NAME2 asks NAME1 if ThirdPron1 wants to play a game, to which NAME1 replies “Of course”. “What game would you like to play?” says NAME2.</string>
    <string name="SleepoverStory6">“Excellent” says NAME2. They decide to play Monopoly and NAME2’s Mum also wants to play. They set up the board and begin playing. NAME1 notices that NAME2’s Dad isn’t home yet and so asks where he is, because ThirdPron1 thinks NAME2’s dad is really funny. NAME2 says that he works late on Fridays. “Ah that cool, what does your Dad work as?” asks NAME1.</string>
    <string name="SleepoverStory7">Monopoly is a long game and when they finish it is quite late. NAME2 notices that NAME1 is wearing a watch. “What time is it?” asks NAME2.</string>
    <string name="SleepoverStory8">NAME1 and NAME2 are quite tired now and so they decide to go to bed. They brush their teeth, put their pyjamas on and climb into bed. NAME2 has bunk beds in ThirdPos2 room so NAME2 sleeps on the top bunk and NAME1 sleeps on the bottom bunk… They wake up in the morning and NAME1 and NAME2’s bellies are rumbling. NAME1 asks “What do you usually have for breakfast?”.</string>
    <string name="SleepoverStory9">NAME1 and NAME2 have their cereal - 2 bowls of Coco Pops - and a glass of orange juice. Just as they finish, they hear the doorbell go. In comes NAME1’s Mum to pick ThirdXPos1 up. NAME2 and NAME1 say goodbye and organise their next sleepover in 2 weeks at NAME1’s house.</string>
    <string name="SleepoverSequence">21212121</string>
    <string name="SleepoverAnswerSequence">22131223</string>
    <string name="SleepoverAct1">You think it would be fun to hide from NAME2. Do an action that shows you are hiding.</string>
    <string name="SleepoverAct2">You are feeling very thirsty. Let NAME1 know you are thirsty.</string>
    <string name="SleepoverAct3">You would like to watch a movie. Let NAME2 know that you would like to watch a movie.</string>
    <string name="SleepoverAct4">You though the film was funny. Let NAME1 know you thought the film was funny.</string>
</resources>