<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.frazzle.appforasc.HomeActivity"
    android:background="@color/BackgroundBlue"
    android:id="@+id/homeAct">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomeScreenTitle"
        android:layout_marginTop="62dp"
        android:focusableInTouchMode="false"
        android:textSize="60sp"
        android:textColor="#FFF"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <Button
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/HomeScreenPlay"
        android:id="@+id/button"
        android:textSize="30sp"
        android:onClick="clickPlay"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/HomeScreenCharacters"
        android:id="@+id/button2"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="clickCharacters" />

    <Button
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/HomeScreenSettings"
        android:id="@+id/button3"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="clickSettings" />

    <Button
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/HomeScreenTutorial"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:onClick="clickTutorial" />

</RelativeLayout>
